# bvf

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  release.toml
.github/workflows/: audit.yml  ci.yml  release.yml
bvf/: Cargo.toml  README.md
bvf-cli/: Cargo.toml  README.md
bvf-cli/src/: main.rs
bvf/src/: config.rs  decrypter.rs  encrypter.rs  errors.rs  io.rs  key_manager.rs  keypair.rs  lib.rs  locked.rs  private_key_format.rs  public_key_format.rs
bvf/tests/: integration.rs
