[workspace]
members = ["bvf", "bvf-cli"]
resolver = "3"

[workspace.package]
version = "0.1.8"

[workspace.lints.clippy]
unused_io_amount = "deny"
cast_possible_truncation = "deny"
unwrap_used = "deny"
indexing_slicing = "warn"
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"

[workspace.lints.rust]
warnings = "deny"
