[package]
name = "bvf-cli"
version.workspace = true
edition = "2024"
description = "Command-line tool for encrypting and decrypting files using the bvf format"
license.workspace = true
repository.workspace = true

[[bin]]
name = "bvf"
path = "src/main.rs"
doc = false

[dependencies]
bvf = { path = "../bvf", version = "0.2.1" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rpassword = "7.4.0"

[lints]
workspace = true
