[package]
name = "bvf"
version.workspace = true
edition = "2024"

[dependencies]
base64 = "0.22.1"
hpke = "0.13.0"
libc = "0.2"
libsodium-rs = "0.2.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
zeroize = "1.8.2"

[lints]
workspace = true
